----------------------------------------------------------------------
 OmegaT 6.0.1
----------------------------------------------------------------------
  0 Enhancement
  1 Bug fixes
----------------------------------------------------------------------

  Bug fixes:

  - Dictionary displays apostrophe as html entitty code
  https://sourceforge.net/p/omegat/bugs/1181

----------------------------------------------------------------------
 OmegaT 6.0.0 (2023-06-22)
----------------------------------------------------------------------
  1 Enhancement
  1 Bug fixes
  11 Localisation updates
----------------------------------------------------------------------
6.0.0 vs 5.8.0

  Implemented requests:

  - OmegaT 6.0 requires Java 11 to run

  Bug fixes:

  - Fixed "null" file names in search results when "Display: file names" checkbox was unchecked
  https://sourceforge.net/p/omegat/bugs/1154/

  Localization Updates:

  - Belarusian localization updated to 6.0 (UI, readme, Instant Start)
  - Brazilian Portuguese localization updated to 6.0 (UI, readme)
  - Catalan localization updated to 6.0 (UI, readme, documentation)
  - Corsican localization updated to 6.0 (UI, readme)
  - Dutch localization updated to 6.0 (UI, readme)
  - French localization updated to 6.0 (UI, readme, documentation)
  - Finnish localization updated to 6.0 (UI, readme)
  - German localization updated to 6.0 (UI, readme, documentation)
  - Italian localization updated to 6.0 (UI, readme)
  - Japanese localization updated to 6.0 (UI, documentation)
  - Ukrainian localization updated to 6.0 (UI, readme)

---------------------------------------------------------------------
 OmegaT 5.8.0 (2023-06-19)
----------------------------------------------------------------------
   4 Removed features
  41 Enhancements
  49 Bug fixes
  12 Localization updates
----------------------------------------------------------------------
5.8.0 vs 5.7.1

  Removed features:

  - Removal of Java Web Start